[tool.poetry]
name = "datascience-template"
version = "0.1.0"
description = ""
authors = ["ryanlupague <rylupague@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
